chore: enforce SpotBugs global suppression and remove websocket package-level NonNullApi