@@ -1,8 +1,12 @@
 package com.koduck.security;
+
 import com.koduck.entity.User;
 import com.koduck.repository.PermissionRepository;
 import com.koduck.repository.RoleRepository;
 import com.koduck.repository.UserRepository;
+import java.util.ArrayList;
+import java.util.List;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.dao.DataAccessException;
 import org.springframework.jdbc.core.JdbcTemplate;
@@ -11,33 +15,40 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-import java.util.List;
-import java.util.stream.Collectors;
+
 /**
- *  UserDetailsService（，）
+ * UserDetailsService implementation for loading users and authorities.
+ *
+ * @author GitHub Copilot
+ * @date 2026-03-31
  */
 @Service
 @Slf4j
+@RequiredArgsConstructor
 public class CustomUserDetailsService implements UserDetailsService {
-    @org.springframework.beans.factory.annotation.Autowired
-    private UserRepository userRepository;
-    @org.springframework.beans.factory.annotation.Autowired
-    private RoleRepository roleRepository;
-    @org.springframework.beans.factory.annotation.Autowired
-    private PermissionRepository permissionRepository;
-    @org.springframework.beans.factory.annotation.Autowired
-    private JdbcTemplate jdbcTemplate;
+
+    private static final String USER_ROLES_TABLE_EXISTS_SQL =
+            "SELECT COUNT(*) FROM information_schema.tables " +
+            "WHERE table_schema = 'public' AND table_name = 'user_roles'";
+
+    private final UserRepository userRepository;
+    private final RoleRepository roleRepository;
+    private final PermissionRepository permissionRepository;
+    private final JdbcTemplate jdbcTemplate;
+
     private volatile Boolean userRolesTableExists;
+
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        //  userId  username  email 
+        // Support loading by userId, username, or email.
         User user;
         try {
             Long userId = Long.parseLong(username);
             user = userRepository.findById(userId)
                     .orElseThrow(() -> new UsernameNotFoundException("User not found: " + username));
-        } catch (NumberFormatException e) {
-            // 
+        } catch (NumberFormatException ex) {
+            log.trace("Username '{}' is not numeric id: {}", username, ex.getMessage());
+            // Fallback to email and username lookup for regular login flow.
             user = userRepository.findByEmail(username)
                     .orElseGet(() -> userRepository.findByUsername(username)
                             .orElseThrow(() -> new UsernameNotFoundException("User not found: " + username)));
@@ -58,15 +69,16 @@ public class CustomUserDetailsService implements UserDetailsService {
                 permissionCodes = List.of();
             }
         }
-        List<SimpleGrantedAuthority> authorities = roleNames.stream()
+        List<SimpleGrantedAuthority> authorities = new ArrayList<>(roleNames.stream()
                 .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                .collect(Collectors.toList());
+            .toList());
         authorities.addAll(permissionCodes.stream()
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList()));
-        //  UserPrincipal  User 
+            .toList());
+        // Build security principal with domain user and granted authorities.
         return new UserPrincipal(user, authorities);
     }
+
     private boolean hasUserRolesTable() {
         Boolean cached = userRolesTableExists;
         if (cached != null) {
@@ -75,8 +87,7 @@ public class CustomUserDetailsService implements UserDetailsService {
         boolean exists;
         try {
             Integer count = jdbcTemplate.queryForObject(
-                    "SELECT COUNT(*) FROM information_schema.tables " +
-                            "WHERE table_schema = 'public' AND table_name = 'user_roles'",
+                USER_ROLES_TABLE_EXISTS_SQL,
                     Integer.class
             );
             exists = count != null && count > 0;
